--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>React [RU] Tutorial</title>
+		<link rel="stylesheet" type="text/css" href="css/app.css">
 	</head>
 	<body>
 		<div id="root">Привет, я #root</div>
